exports[`Client test get edges 1`] = `
Array [
  Object {
    "id": "555",
    "message": "Hie",
  },
  Object {
    "id": "666",
    "message": "Where?",
  },
]
`;

exports[`Client test get edges 2`] = `
Array [
  Object {
    "id": "next1",
  },
]
`;

exports[`Client test get edges 3`] = `
Array [
  Object {
    "id": "prev1",
  },
]
`;

exports[`Client test get single 1`] = `
Object {
  "id": 15,
}
`;
